16141: Bugfix: Expand / collapse icon lost from download page

--- a/css/dialogs-common.css
+++ b/css/dialogs-common.css
@@ -3,7 +3,7 @@
  */
 
 .dialog-sprite, i.dialog-sprite {
-    background-image: url(../images/mega/dialog-sprite_v12.png);
+    background-image: url(../images/mega/dialog-sprite_v14.png);
     background-repeat:  no-repeat;
 }
 .fm-dialog.big-radius {
